erDiagram

    %% Relationships
    Repository ||--o{ Commit : own
    User ||--o{ Feedback : send
    Project ||--o{ AnalysisResult : contains
    Project ||--o{ ProjectMember : has
    User ||--o{ ProjectMember : add
    Repository ||--o{ PullRequest : own
    ProjectMember ||--o{ Repository : create
    Project ||--o{ Sprint : has
    Project ||--o{ Task : has
    ProjectMember ||--o{ Task : do
    ProjectMember ||--o{ EvaluationResult : receive
    Task ||--o{ TaskSprint : belong-to
    Task ||--o{ Issue : meet
    Sprint ||--o{ TaskSprint : add
    Task ||--o{ WorkFlow : has
